更新用户模块